# poryaaaa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODOS.md  m4a_plugin.cfg  m4a_plugin.cfg.example  mingw-toolchain.cmake  poryaaaa.cfg.example
cmd/: m4a_render.c  poryaaaa_render.c
plugin/: Info.plist  imgui_impl_pugl.cpp  imgui_impl_pugl.h  m4a_channel.c  m4a_channel.h  m4a_engine.c  m4a_engine.h  m4a_gui.cpp  m4a_gui.h  m4a_plugin.c  m4a_plugin.h  m4a_reverb.c  m4a_reverb.h  m4a_tables.c  m4a_tables.h  standalone_main_linux.cpp  standalone_main_win32.cpp  voicegroup_loader.c  voicegroup_loader.h
test/: test_engine.c  test_wav_export.c
